--- a/website/index.html
+++ b/website/index.html
@@ -6,20 +6,7 @@ R"(
   <meta charset="utf-8" http-equiv="" content="15">
   <title>LedMatrix</title>
   <link rel="icon" href=https://i.ibb.co/pQtKHwN/Shrigma-Spook.png>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/3.6.2/fetch.min.js"
-    integrity="sha512-1Gn7//DzfuF67BGkg97Oc6jPN6hqxuZXnaTpC9P5uw8C6W4yUNj5hoS/APga4g1nO2X6USBb/rXtGzADdaVDeA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script>
-    function BTN_Activity(str) {
-      fetch(window.location.href + "swap?" + new URLSearchParams({
-        mode: str,
-      }), {
-        method: "GET",
-      }).catch(error => {
-        console.log(error)
-      })
-    }
-  </script>
+
 </head>
 
 <body>
@@ -54,13 +41,77 @@ R"(
       </div>
     </div>
     <div class="footer">
-      <div class="main-activity">
+      <div id="main-activity">
 
       </div>
       <div id="activity-dash">
         <div id="activity-container">
-          <div class="activity" onclick="BTN_Activity('FFT') "> </div>
-          <div class="activity" onclick="BTN_Activity('CLOCK') "> </div>
+          <div class="activity" onclick="BTN_Activity('FFT') ">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="FFT"
+              viewBox="0 0 256 256" xml:space="preserve">
+
+              <defs>
+              </defs>
+              <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10;  fill-rule: nonzero; opacity: 1;"
+                transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81) ">
+                <path
+                  d="M 87.25 87.433 H 68.673 c -1.519 0 -2.75 -1.231 -2.75 -2.75 v -9.048 c 0 -1.519 1.231 -2.75 2.75 -2.75 H 87.25 c 1.519 0 2.75 1.231 2.75 2.75 v 9.048 C 90 86.202 88.769 87.433 87.25 87.433 z"
+                  style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10;  fill-rule: nonzero; opacity: 1;"
+                  transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+                <path
+                  d="M 87.25 69.853 H 68.673 c -1.519 0 -2.75 -1.231 -2.75 -2.75 v -9.048 c 0 -1.519 1.231 -2.75 2.75 -2.75 H 87.25 c 1.519 0 2.75 1.231 2.75 2.75 v 9.048 C 90 68.622 88.769 69.853 87.25 69.853 z"
+                  style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10;  fill-rule: nonzero; opacity: 1;"
+                  transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+                <path
+                  d="M 87.25 52.274 H 68.673 c -1.519 0 -2.75 -1.231 -2.75 -2.75 v -9.048 c 0 -1.519 1.231 -2.75 2.75 -2.75 H 87.25 c 1.519 0 2.75 1.231 2.75 2.75 v 9.048 C 90 51.043 88.769 52.274 87.25 52.274 z"
+                  style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10;  fill-rule: nonzero; opacity: 1;"
+                  transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+                <path
+                  d="M 87.25 34.694 H 68.673 c -1.519 0 -2.75 -1.231 -2.75 -2.75 v -9.048 c 0 -1.519 1.231 -2.75 2.75 -2.75 H 87.25 c 1.519 0 2.75 1.231 2.75 2.75 v 9.048 C 90 33.463 88.769 34.694 87.25 34.694 z"
+                  style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10;  fill-rule: nonzero; opacity: 1;"
+                  transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+                <path
+                  d="M 87.25 17.115 H 68.673 c -1.519 0 -2.75 -1.231 -2.75 -2.75 V 5.317 c 0 -1.519 1.231 -2.75 2.75 -2.75 H 87.25 c 1.519 0 2.75 1.231 2.75 2.75 v 9.048 C 90 15.884 88.769 17.115 87.25 17.115 z"
+                  style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10;  fill-rule: nonzero; opacity: 1;"
+                  transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+                <path
+                  d="M 54.289 87.433 H 35.711 c -1.519 0 -2.75 -1.231 -2.75 -2.75 v -9.048 c 0 -1.519 1.231 -2.75 2.75 -2.75 h 18.577 c 1.519 0 2.75 1.231 2.75 2.75 v 9.048 C 57.039 86.202 55.807 87.433 54.289 87.433 z"
+                  style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10;  fill-rule: nonzero; opacity: 1;"
+                  transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+                <path
+                  d="M 54.289 69.853 H 35.711 c -1.519 0 -2.75 -1.231 -2.75 -2.75 v -9.048 c 0 -1.519 1.231 -2.75 2.75 -2.75 h 18.577 c 1.519 0 2.75 1.231 2.75 2.75 v 9.048 C 57.039 68.622 55.807 69.853 54.289 69.853 z"
+                  style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10;  fill-rule: nonzero; opacity: 1;"
+                  transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+                <path
+                  d="M 54.289 52.274 H 35.711 c -1.519 0 -2.75 -1.231 -2.75 -2.75 v -9.048 c 0 -1.519 1.231 -2.75 2.75 -2.75 h 18.577 c 1.519 0 2.75 1.231 2.75 2.75 v 9.048 C 57.039 51.043 55.807 52.274 54.289 52.274 z"
+                  style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10;  fill-rule: nonzero; opacity: 1;"
+                  transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+                <path
+                  d="M 21.327 87.433 H 2.75 c -1.519 0 -2.75 -1.231 -2.75 -2.75 v -9.048 c 0 -1.519 1.231 -2.75 2.75 -2.75 h 18.577 c 1.519 0 2.75 1.231 2.75 2.75 v 9.048 C 24.077 86.202 22.846 87.433 21.327 87.433 z"
+                  style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10;  fill-rule: nonzero; opacity: 1;"
+                  transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+              </g>
+            </svg>
+          </div>
+          <div class="activity" onclick="BTN_Activity('CLOCK') ">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="CLOCK" version="1.1"
+              viewBox="0 0 256 256" xml:space="preserve">
+              <defs>
+              </defs>
+              <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill-rule: nonzero; opacity: 1;"
+                transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81) ">
+                <path
+                  d="M 64.444 66.135 c -0.732 0 -1.467 -0.267 -2.045 -0.806 L 42.954 47.194 C 42.346 46.627 42 45.832 42 45 V 18.411 c 0 -1.657 1.343 -3 3 -3 c 1.657 0 3 1.343 3 3 v 25.285 L 66.491 60.94 c 1.212 1.131 1.278 3.028 0.148 4.24 C 66.049 65.814 65.248 66.135 64.444 66.135 z"
+                  style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill-rule: nonzero; opacity: 1;"
+                  transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+                <path
+                  d="M 45 90 C 20.187 90 0 69.813 0 45 C 0 20.187 20.187 0 45 0 c 24.813 0 45 20.187 45 45 C 90 69.813 69.813 90 45 90 z M 45 6 C 23.495 6 6 23.495 6 45 s 17.495 39 39 39 s 39 -17.495 39 -39 S 66.505 6 45 6 z"
+                  style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill-rule: nonzero; opacity: 1;"
+                  transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+              </g>
+            </svg>
+
+          </div>
           <div class="activity" onclick="BTN_Activity('REMOTE') "> </div>
         </div>
         <div class="pull_tab">
@@ -85,13 +136,9 @@ R"(
     margin: 0;
   }
 
-  svg {
-    width: 50%;
-    fill: hsl(var(--sc), 60%, 15%);
-  }
-
-  #settings {
+  button.col svg {
     width: 80%;
+    fill: hsl(var(--sc), 60%, 15%);
   }
 
   button.col {
@@ -111,7 +158,7 @@ R"(
   }
 
   button.col:hover svg {
-    fill: hsl(var(--sc), 60%, 40%);
+    fill: hsl(var(--sc), 60%, 50%);
   }
 
   .site {
@@ -148,12 +195,22 @@ R"(
   }
 
 
-  .footer .main-activity {
+  #main-activity {
     height: 100%;
     background-color: hsl(var(--tc), 60%, 50%);
     aspect-ratio: 1;
     z-index: 3;
     position: relative;
+  }
+
+  #main-activity svg {
+    width: 80%;
+    hsl(var(--sc), 60%, 15%);
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    fill: hsl(var(--tc), 20%, 15%);
   }
 
   .activity {
@@ -165,8 +222,22 @@ R"(
     border-radius: 10px;
   }
 
+  .activity svg {
+    width: 80%;
+    hsl(var(--sc), 60%, 15%);
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    fill: hsl(var(--tc), 20%, 15%);
+  }
+
   .activity:hover {
     background-color: hsl(var(--tc), 20%, 40%);
+  }
+
+  .activity:hover svg {
+    fill: hsl(var(--tc), 20%, 50%);
   }
 
   #activity-dash {
@@ -197,6 +268,7 @@ R"(
     display: inline-block;
     position: relative;
     left: -45px;
+    z-index: -1;
   }
 
   .arrow-left {
@@ -215,6 +287,31 @@ R"(
     left: 100px;
   }
 </style>
+<script>
+
+
+  var socket = new WebSocket('ws://' + location.hostname + ':81/', ['arduino']);
+  socket.onopen = function () {
+    console.log('Connected')
+  }
+  socket.onerror = function (error) {
+    console.log(error)
+  }
+  socket.onmessage = function (event) {
+    console.log(event.data)
+    let data = event.data
+    if (data[0] = 'S') {
+      const el = document.getElementById("main-activity");
+      const svg = document.getElementById(data.slice(1));
+      console.log(data.slice(1));
+      el.innerHTML = svg.outerHTML;
+    }
+  }
+  function BTN_Activity(str) {
+    socket.send('S' + str);
+  }
+
+</script>
 
 </html>
 )"
